--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,5 +1,6 @@
 <html>
-<body>
-<object data="/group/"></object>
-</body>
+  <body>
+    <object data="/group/"></object>
+    <object data=”https://www.google.com” width=”200″ height=”200″></object>
+  </body>
 </html>
